# selfcare_ai_service

./: .env.example  .gitignore  Cargo.toml  README.md  ROADMAP.md  TRANSFORMATION_PLAN.md  first_guide.md  index.html
.cache/huggingface/models--mistralai--Mistral-7B-Instruct-v0.2/refs/: main
data/: ai_cache.sqlite
scripts/: manage.sh  test_api.sh
src/: config.rs  main.rs
src/handlers/: chat.rs  health.rs  logs.rs  mod.rs  scripts.rs
src/middleware/: cors.rs
src/repositories/: cache_repo.rs  mod.rs  redis_repo.rs
src/routes/: api.rs
src/services/: ai_service.rs  cache_service.rs  mod.rs  model_service.rs  search_service.rs
src/utils/: hashing.rs  mod.rs  prompts.rs  ranking.rs
