[package]
name = "selfcare_ai_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# AI/ML dependencies
candle-core = "0.6"
candle-transformers = "0.6"
candle-nn = "0.6"
tokenizers = "0.19"
hf-hub = "0.3"

# HTTP client for downloading models
reqwest = { version = "0.11", features = ["json"] }

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Async utilities
futures = "0.3"

[dev-dependencies]
actix-rt = "2.9"