[package]
name = "selfcare_ai_service"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "AI service for troubleshooting, log analysis, and script generation"
license = "MIT"
repository = "https://github.com/your-username/selfcare_ai_service"
readme = "README.md"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
actix-rt = "2.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenv = "0.15"
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }
num_cpus = "1.16"

# Security
ring = "0.17"
jsonwebtoken = "9.2"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = "1.48.0"
futures-util = "0.3.31"

[dev-dependencies]
actix-test = "0.1"
mockall = "0.11"
rstest = "0.18"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
